--- a/example1.html
+++ b/example1.html
@@ -4,14 +4,14 @@
   <meta charset="utf-8">
   <title>My Web Page</title>
 </head>
-<body>
-  <h1>My First Website</h1>
-   <h2>I hope I like it here.</h2>
+<body style="background-color:lavender;">
+  <h1 style="background-color: lightskyblue;">My First Website</h1>
+   <h2 style="border-style:solid; border-width:1px;">I hope I like it here.</h2>
     <h3>I hope I like it here.</h3>
      <h4>I hope I like it here.</h4>
       <h5>I hope I like it here.</h5>
        <h6>I hope I like it here.</h6>
-        <p>This is my paragraphy.</p><br>
+        <p style="color:red">This is my paragraphy.</p><br>
         <p>This is another paragraphy.</p>
          <b>Bold text</b>
          <i>Italic text</i>
@@ -19,6 +19,7 @@
          <sub>Subscript text</sub>
          <sup>Superscript text</sup>
          <img src="http://www.cuc.edu.cn/_upload/site/00/05/5/logo.png">
-         <a href="http://www.cuc.edu.cn/">this is the link to cuc Website</a>
+         <a href="http://www.cuc.edu.cn/" target="_blank">this is the link to cuc Website</a><br>
+         <img src="微信图片_20210311102830.jpg">
 </body>
 </html>
